--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.47",
+        "prettier": "^3.5.3",
         "tailwindcss": "^3.4.13",
         "vite": "^6.0.11"
     },
