--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "flowbite": "^3.1.2",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.47",
         "prettier": "^3.5.3",
